
Better Exposed Filters change log
---------------------------------

Better Exposed Filters 7.x-x.x  xxxx-xx-xx
------------------------------------------
Issue #975376 by mikeker, gordon: Inital port.  Note: only supports Views 3.x as there is no 2.x release planned for D7.
Issue #1109950 by mikeker, Francois LR: Fixes errors in taxonomy tree
Issue #1099528 by mikeker: Radio button labels not displayed 

Better Exposed Filters 6.x-x.x  xxxx-xx-xx
------------------------------------------
#864614 by OxideInteractive: Fixes extra space in class attributes
#874978 by vosechu: select_as_checkboxes now respects #default_value
#812778 by mikeker: Fixes problem with "Show hierarchy in dropdown enabled"
#811954 by pivica: Fixes duplicate Select All/None links with multiple Behavior executions
#657148 by mikeker: Adds support for exposed sort manipulation
#965388 by mikeker: Adds support for collapsible fieldsets
#965388 by mikeker: Adds support for collapsible fieldsets
mikeker: Adds nested list display for hierarchical taxonomy filters
#894312 by kenorb, mikeker: Adds links as a BEF option
#1006716 by attiks: Corrects <label>/<input> tag order 

Better Exposed Filters 6.x-1.0  2010-05-25
------------------------------------------
Initial release.  Supports Views 2.x and 3.x.